--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -1,3 +1,19 @@
-<h1>Root#index</h1>
-<p>Find me in app/views/root/index.html.erb</p>
-<div id="root">
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Hello Rails React App</title>
+</head>
+<body>
+  <div id="root"></div>
+  <script src="/packs/application-bundle.js"></script>
+  <script type="text/javascript">
+    import React from 'react';
+    import ReactDOM from 'react-dom';
+    import App from '../components/App';
+
+    document.addEventListener('DOMContentLoaded', () => {
+      ReactDOM.render(<App />, document.getElementById('root'));
+    });
+  </script>
+</body>
+</html>
